--- a/css/geral.css
+++ b/css/geral.css
@@ -13,7 +13,7 @@
 }
 
 .text_button{
-    font-size: 20px;
+    font-size: 16px;
     font-weight: 500;
 }
 header{
@@ -23,7 +23,7 @@ header{
 
 
 .topico{
-    padding: 0 24px;
+    /* padding: 0 24px; */
     gap: 16px;
     margin-top: 24px;
     width: 100%;
