--- a/css/geral.css
+++ b/css/geral.css
@@ -72,9 +72,9 @@ tr {
 }
 
 span {
-    width: 50px;
+    width: 40px;
     height: 50px;
-    margin-right: 10px;
+    /* margin-right: 10px; */
     font-size: 24px;
     display: flex;
     align-items: center;
@@ -91,7 +91,7 @@ span {
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 20px;
+    font-size: 16px;
     font-weight: 500;
 }
 
