--- a/css/diario.css
+++ b/css/diario.css
@@ -54,7 +54,7 @@ h2{
 }
 
 tr {
-    height: 70px;
+    /* height: 120px; */
     width: 100%;
     justify-content: space-between;
     display: flex;
@@ -63,6 +63,10 @@ tr {
     margin-bottom: 6px;
     transition: 0.3s;
     background-color: #202F36;
+}
+
+td{
+    padding: 5px;
 }
 
 
@@ -87,8 +91,8 @@ span {
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 16px;
-    font-weight: 500;
+    font-size: 20px;
+    font-weight: 600;
 }
 
 .xpscore {
@@ -101,4 +105,21 @@ h1,
 h3 {
     width: 100%;
     text-align: center;
+}
+.name_points{
+    margin-left: 8px;
+}
+
+.name_points p{
+    font-size: 12px;
+    color: #82959e;
+    font-weight: 400;
+}
+
+.points p{
+    font-size: 12px;
+    font-weight: 400;
+    display: flex;
+    justify-content: flex-end;
+    margin-right: 8px;
 }
